# mypt

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  TriangleMesh.h  a.out  bvh_debug  config.txt  debug.txt  gprof_result.txt  gprof_result_slow.txt  gprof_result_ubuntu.txt  gprof_result_ubuntu2.txt  image.ppm  log.txt  penmp  scene.txt
profile/: gprof_result_fast.txt  gprof_result_slow.txt
result/bunny01/: invert.txt  ref.txt
result/bunny02/: invert.txt  ref.txt
result/cube01/: invert.txt  ref.txt
result/cube02/: invert.txt  ref.txt
result/cube03/: invert.txt  ref.txt
result/cube04/: invert.txt  ref.txt
result/cube05/: invert.txt  ref.txt
result/cube_debug/: invert.txt  ref.txt
result/sphere01/: invert.txt  ref.txt
result/sphere02/: invert.txt  ref.txt
result/sphere03/: invert.txt  invert_mmaps.txt  ref.txt
result/sphere04/: invert.txt  ref.txt
result/sphere_fish/: invert.txt  ref.txt
result/sphere_fish02/: invert.txt  ref.txt
result/sphere_qr/: invert.txt
result/teapot01/: invert.txt  ref.txt
result/teapot02/: invert.txt  ref.txt
result/teapot03/: ref.txt
scene/: config.txt  cornel_box.h  cornel_mmaps.txt  cube_debug.txt  debug.txt  debug_scene.h  example.txt  inv_result.txt  invert.txt  invert_mmaps.txt  mmaps.txt  mmaps_test.h  notransform.h  object_test.h  planeandbunny.h  ref.txt  scene.txt  sphere.txt  triangle_test.h
src/: PBRenderer.cpp  Util.h  a.out  aabb.h  bvh.h  bvh_test.ppm  camera.h  hittable.h  hittable_list.h  hoge.ppm  image.ppm  main.cpp  material.h  moving_sphere.h  mypt.cpp  obj.ppm  perlin.h  ray.h  rtweekend.h  smoothing_test.ppm  sphere.h  texture.h  tri.ppm  triangle.h  triangle_mesh.h  vec2.h  vec3.h
src/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/core/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  Camera.h  Image.cpp  Image.h  Material.h  MathUtil.h  ONB.h  PBRenderer.h  PDF.h  Params.h  Perlin.cpp  Perlin.h  Primitive.cpp  Primitive.h  Ray.h  Scene.cpp  Scene.h  Shape.h  ShapeList.h  Texture.h  Transform.cpp  Transform.h  TransformPrimitive.cpp  TransformPrimitive.h  Util.h  aabb.cpp  aabb.h  bsdf.cpp  bsdf.h  bvh.h  color.h  envmap.cpp  envmap.h  fresnel.h  image.cpp  image.h  load3d.h  (+25 more)
src/ext/: stb_image.h
src/material/: Absorber.cpp  Absorber.h  Dielectric.cpp  Dielectric.h  Disney.h  Emitter.cpp  Emitter.h  Isotropic.h  Lambertian.cpp  Lambertian.h  MMAPs.cpp  MMAPs.h  Metal.cpp  Metal.h  NormalMat.cpp  NormalMat.h  dielectric.cpp  dielectric.h  disney.cpp  disney.h  emitter.h  isotropic.h  lambertian.cpp  metal.cpp  normal.cpp  normal.h
src/python/: Invert_render.ipynb  Plot Vector at intersection.ipynb  Untitled.ipynb  hoge.py  plot_vector.py
src/python/.ipynb_checkpoints/: Invert_render-checkpoint.ipynb  Plot Vector at intersection-checkpoint.ipynb  Untitled-checkpoint.ipynb
src/render/: Camera.cpp  Camera.h  Integrator.cpp  Integrator.h  Sampler.h  camera.cpp  camera.h  integrator.cpp  integrator.h  sampler.h
src/shape/: AxisPlane.cpp  AxisPlane.h  ConstantMedium.cpp  ConstantMedium.h  FlipFace.h  ImagePlane.cpp  ImagePlane.h  MovingSphere.cpp  MovingSphere.h  Moving_sphere.h  Params.h  Plane.cpp  Plane.h  ShapeGroup.cpp  ShapeGroup.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  TriangleMesh.h  flip_face.h  moving_sphere.cpp  moving_sphere.h  sphere.cpp  triangle.cpp  triangle.h
src/tests/: 3d_model_test.cpp  ImageTest.cpp  MathUtilTest.cpp  a.out  assertion_check.cpp  cast_test.cpp  epsilon_test.cpp  file_system.cpp  implicit_test.cpp  includeTest.cpp  includeTest.h  includeTestMain.cpp  initialize_test.cpp  macro_test.cpp  mattest.cpp  mmaps_test.cpp  nullptr_test.cpp  obj_size.cpp  onb_test.cpp  operator_test.cpp  pair_test.cpp  pointer_test.cpp  pp.c  random.cpp  reftest.cpp  sampling.cpp  scene_test.cpp  shared_ptr.cpp  shared_ptr_test.cpp  size_pointer.cpp  size_test.cpp  string.cpp  string_test.cpp  stringstream_test.cpp  strtest.cpp  transform_test.cpp  union_test.cpp  user_define_cast.cpp  util.h  variadic_templates.cpp  (+2 more)
src/texture/: Checker.h  CheckerTexture.h  Constant.h  ConstantTexture.h  ImageTexture.cpp  ImageTexture.h  Noise.h  NoiseTexture.cpp  NoiseTexture.h  checker.h  constant.h  image.cpp  image.h  noise.cpp  noise.h
